<resources>
    <string name="app_name">Dungeons and Dragons Traven</string>
    <string name="dungeons_dragons_taverns"><![CDATA[Dungeons & Dragons Taverns]]></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_button">back button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_character_btn">create character btn</string>
    <string name="log_out">Log Out</string>
    <string name="how_do_you_want_to_create_your_character">How do you want to create your character?</string>
    <string name="cancel_icon">cancel icon</string>
    <string name="character_image">Character Image</string>
    <string name="change_image">Change Image</string>
    <string name="race">Race</string>
    <string name="clas">Class</string>
    <string name="continu">Continue</string>
    <string name="manual_creation">Manual Creation</string>
    <string name="randomized_creation">Randomized Creation</string>
    <string name="points_remaining">Points Remaining</string>
    <string name="con">Con</string>
    <string name="str">Str</string>
    <string name="dex">Dex</string>
    <string name="base">Base:</string>
    <string name="modifier">Modifier:</string>
    <string name="race_bonus">Race Bonus:</string>
    <string name="total">Total:</string>
    <string name="intpoint">Int</string>
    <string name="wis">Wis</string>
    <string name="charism">Char</string>
    <string name="background">Background</string>
    <string name="skill_proficiencies">Skill Proficiencies</string>
    <string name="langauges">Langauges</string>
    <string name="background_feature">Background Feature</string>
    <string name="alignment">Alignment</string>
    <string name="faith">Faith</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="enter_faith">Enter faith</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age_years">Age(years)</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="character_s_height">Character\'s Height</string>
    <string name="character_s_weight">Character\'s Weight</string>
    <string name="character_s_age">Character\'s Age</string>
    <string name="character_s_gender">Character\'s Gender</string>
    <string name="character_s_name">Character\'s Name</string>
    <string name="create_character">Create Character</string>
    <string name="generate_name">Generate Name</string>
    <string name="other_proficiencies">Other Proficiencies</string>
    <string name="physical_characteristics">Physical Characteristics</string>
    <string name="hair">Hair</string>
    <string name="skin">Skin</string>
    <string name="eyes">Eyes</string>
    <string name="character_hair">Character Hair</string>
    <string name="character_skin">Character Skin</string>
    <string name="character_eyes">Character Eyes</string>
    <string name="generate">Generate</string>
    <string name="enter_name">Enter Name</string>
    <string name="choose_what_you_would_like_to_view">Choose what you would like to view</string>
    <string name="character_s_hp_race_and_class">hp, race, and class</string>
    <string name="stats">stats</string>
    <string name="background_and_proficiencies">background and Proficiencies</string>
    <string name="alignment_faith_and_lifestyle">alignment, faith, and lifestyle</string>
    <string name="character_s_details">Character\'s details</string>
    <string name="inventory">Inventory</string>
    <string name="spell_list">Spell List</string>
    <string name="delete_character">Delete Character</string>
    <string name="edit_character">Edit Character</string>
    <string name="add_item_icon">add item icon</string>
    <string name="status">Status:</string>
    <string name="character_status">Character Status</string>
    <string name="health">Health:</string>
    <string name="health_points">health points</string>
    <string name="points">points</string>
    <string name="enter_spell_name">Enter spell name</string>
    <string name="spell_name">Spell Name</string>
    <string name="enter_spell_description_here">Enter spell description here</string>
    <string name="confirm">Confirm</string>
    <string name="all_spells">All Spells</string>
    <string-array name="all_races">
        <item>Select a race</item>
        <item>Aarakocra</item>
        <item>Dragonborn</item>
        <item>Hill Dwarf</item>
        <item>Mountain Dwarf</item>
        <item>Eladrin Elf</item>
        <item>High Elf</item>
        <item>Wood Elf</item>
        <item>Air Genasi</item>
        <item>Earth Genasi</item>
        <item>Water Genasi</item>
        <item>Fire Genasi</item>
        <item>Deep Gnome</item>
        <item>Rock Gnome</item>
        <item>Goliath</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Human</item>
        <item>Lightfoot Halfling</item>
        <item>Stout Halfling</item>
        <item>Tiefling</item>
        <item>Aasimar</item>
    </string-array>
    <string-array name="all_classes">
        <item>Select a class</item>
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="point_number">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="background_array">
        <item>Choose a background</item>
        <item>Acolyte</item>
        <item>Criminal/Spy</item>
        <item>Folk Hero</item>
        <item>Haunted One</item>
        <item>Noble</item>
        <item>Sage</item>
        <item>Soldier</item>
    </string-array>
    <string-array name="all_languages">
        <item>Select a language</item>
        <item>Abyssal</item>
        <item>Celestial</item>
        <item>Daelkyr</item>
        <item>Deep Speech</item>
        <item>Draconic</item>
        <item>Dwarvish</item>
        <item>Elvish</item>
        <item>Giant</item>
        <item>Gith</item>
        <item>Gnomish</item>
        <item>Goblin</item>
        <item>Halfling</item>
        <item>Infernal</item>
        <item>Kraul</item>
        <item>Loxodon</item>
        <item>Minotaur</item>
        <item>Orc</item>
        <item>Primordial</item>
        <item>Quori</item>
        <item>Riedran</item>
        <item>Sylvan</item>
        <item>Undercommon</item>
        <item>Vedalken</item>
    </string-array>
    <string-array name="all_languages_edit">
        <item>Abyssal</item>
        <item>Celestial</item>
        <item>Daelkyr</item>
        <item>Deep Speech</item>
        <item>Draconic</item>
        <item>Dwarvish</item>
        <item>Elvish</item>
        <item>Giant</item>
        <item>Gith</item>
        <item>Gnomish</item>
        <item>Goblin</item>
        <item>Halfling</item>
        <item>Infernal</item>
        <item>Kraul</item>
        <item>Loxodon</item>
        <item>Minotaur</item>
        <item>Orc</item>
        <item>Primordial</item>
        <item>Quori</item>
        <item>Riedran</item>
        <item>Sylvan</item>
        <item>Undercommon</item>
        <item>Vedalken</item>
    </string-array>
    <string-array name="artisan_tools">
        <item>Select a art</item>
        <item>Alchemist’s supplies</item>
        <item>Brewer’s supplies</item>
        <item>Carpenter’s tools</item>
        <item>Cartographer’s tools</item>
        <item>Cobbler’s tools</item>
        <item>Cook’s utensils</item>
        <item>Glassblower’s tools</item>
        <item>Jeweler’s tools</item>
        <item>Leatherworker’s tools</item>
        <item>Mason’s tools</item>
        <item>Painter’s supplies</item>
        <item>Potter’s tools</item>
        <item>Smith’s tools</item>
        <item>Tinker’s tools</item>
        <item>Weaver’s tools</item>
        <item>Woodcarver’s tools</item>
    </string-array>
    <string-array name="artisan_tools_edit">
        <item>Alchemist’s supplies</item>
        <item>Brewer’s supplies</item>
        <item>Carpenter’s tools</item>
        <item>Cartographer’s tools</item>
        <item>Cobbler’s tools</item>
        <item>Cook’s utensils</item>
        <item>Glassblower’s tools</item>
        <item>Jeweler’s tools</item>
        <item>Leatherworker’s tools</item>
        <item>Mason’s tools</item>
        <item>Painter’s supplies</item>
        <item>Potter’s tools</item>
        <item>Smith’s tools</item>
        <item>Tinker’s tools</item>
        <item>Weaver’s tools</item>
        <item>Woodcarver’s tools</item>
    </string-array>
    <string-array name="exotic_languages">
        <item>Select exotic language</item>
        <item>Abyssal</item>
        <item>Celestial</item>
        <item>Deep Speech</item>
        <item>Draconic</item>
        <item>Infernal</item>
        <item>Primordial</item>
        <item>Undercommon</item>
    </string-array>
    <string-array name="exotic_languages_edit">
        <item>Abyssal</item>
        <item>Celestial</item>
        <item>Deep Speech</item>
        <item>Draconic</item>
        <item>Infernal</item>
        <item>Primordial</item>
        <item>Undercommon</item>
    </string-array>
    <string-array name="game_set">
        <item>Select a game set</item>
        <item>Dice</item>
        <item>Dragonchess</item>
        <item>Playing cards</item>
        <item>Three-Dragon Ante</item>
    </string-array>
    <string-array name="thieve_tool">
        <item>Thieves Tools</item>
    </string-array>
    <string-array name="vehicles">
        <item>Vehicles (Land)</item>
    </string-array>
    <string-array name="nothing">
        <item>None</item>
    </string-array>
    <string-array name="all_alignments">
        <item>Select a alignment</item>
        <item>Chaotic Evil</item>
        <item>Chaotic Good</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Lawful Good</item>
        <item>Lawful Neutral</item>
        <item>Neutral</item>
        <item>Neutral Evil</item>
        <item>Neutral Good</item>
    </string-array>
    <string-array name="all_lifestyles">
        <item>Select a lifestyle</item>
        <item>Wretched</item>
        <item>Squalid</item>
        <item>Poor</item>
        <item>Modest</item>
        <item>Comfortable</item>
        <item>Wealthy</item>
        <item>Aristocratic</item>
    </string-array>
    <string-array name="all_races_edit">
        <item>Aarakocra</item>
        <item>Dragonborn</item>
        <item>Hill Dwarf</item>
        <item>Mountain Dwarf</item>
        <item>Eladrin Elf</item>
        <item>High Elf</item>
        <item>Wood Elf</item>
        <item>Air Genasi</item>
        <item>Earth Genasi</item>
        <item>Water Genasi</item>
        <item>Fire Genasi</item>
        <item>Deep Gnome</item>
        <item>Rock Gnome</item>
        <item>Goliath</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Human</item>
        <item>Lightfoot Halfling</item>
        <item>Stout Halfling</item>
        <item>Tiefling</item>
        <item>Aasimar</item>
    </string-array>
</resources>