<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUpScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5A352A"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#0353A4"
        android:text="@string/sign_up"
        android:textColor="#B9D6F2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signRepeatPassText" />

    <EditText
        android:id="@+id/signEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signBackBtn"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/signPassText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/signEmailText"
        app:layout_constraintStart_toStartOf="@+id/signEmailText"
        app:layout_constraintTop_toBottomOf="@+id/signEmailText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/signRepeatPassText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/signPassText"
        app:layout_constraintStart_toStartOf="@+id/signPassText"
        app:layout_constraintTop_toBottomOf="@+id/signPassText"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/signBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>